--- a/lesson-2/demo/package.json
+++ b/lesson-2/demo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "demo",
   "version": "1.0.0",
-  "description": "",
+  "description": "aaa",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
