--- a/lesson-2/demo/package.json
+++ b/lesson-2/demo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "demo",
   "version": "1.0.0",
-  "description": "aaa",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "connect-multiparty": "^2.2.0",
+    "express": "^4.16.4",
     "form-data": "^2.3.2",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4"
