--- a/lesson-2/demo/package.json
+++ b/lesson-2/demo/package.json
@@ -9,12 +9,20 @@
   },
   "author": "",
   "license": "ISC",
+  "bcrypt": "^3.0.0",
+  "body-parser": "^1.18.3",
+  "express": "^4.16.3",
+  "jsonwebtoken": "^8.3.0",
+  "morgan": "^1.9.1",
+  "multer": "^1.4.0",
+  "nodemon": "^1.18.4",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "connect-multiparty": "^2.2.0",
     "express": "^4.16.4",
-    "form-data": "^2.3.2",
+    "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
+    "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.0",
     "nodemon": "^1.18.4"
   }
 }
