--- a/Passport_JS/package.json
+++ b/Passport_JS/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "multer_send_use_fetch",
+  "name": "auth",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.16.4",
-    "mongoose": "^5.5.1",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.1",
-    "nodemon": "^1.18.11"
+    "express-session": "^1.16.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.2.0"
   }
 }
